[package]
name = "squads-program"
version = "2.0.1"
authors = ["Sean Lars Ganser <sean@sqds.io>", "Bastien Guillaumat <bastien@sqds.io>"]
edition = "2018"
license = "LGPL-3.0"

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "1.9.5"
thiserror = "1.0.24"
spl-token = {version = "3.1.0", features = ["no-entrypoint"]}
spl-associated-token-account = {version="1.0.3", features=["no-entrypoint"]}
metaplex-token-metadata = {version = "0.0.1", features = ["no-entrypoint"]}
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"

[features]
no-entrypoint = []
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.8.2"
solana-sdk = "1.9.5"
solana-validator = "1.9.4"
chrono = "0.4.19"

[lib]
crate-type = ["cdylib", "lib"]
