[package]
name = "squads-program"
version = "2.0.1"
authors = ["Sean Lars Ganser <sean@sqds.io>", "Bastien Guillaumat <bastien@sqds.io>"]
edition = "2018"
description = "Squads is an on-chain program that allows team to manage digital assets together, create proposals, and more."
homepage = "https://squads.so"
repository = "https://github.com/squads-dapp/program"
license = "LGPL-3.0"
keywords = ["squads", "solana", "program", "smart-contract", "multisig"]
readme = "README.md"


[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "1.9.5"
thiserror = "1.0.24"
spl-token = {version = "3.1.0", features = ["no-entrypoint"]}
spl-associated-token-account = {version="1.0.3", features=["no-entrypoint"]}
metaplex-token-metadata = {version = "0.0.1", features = ["no-entrypoint"]}
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"

[features]
no-entrypoint = []
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.8.2"
solana-sdk = "1.9.5"
solana-validator = "1.9.4"
chrono = "0.4.19"

[lib]
crate-type = ["cdylib", "lib"]
